--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "E-commerce website in MERN stack",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
